@@ -1,3 +1,6 @@
+V. 11
+- New text feature - mark for qurrently tracked quest. It displays direction for all time and inherits size of default POI mark, changes color depends on whether it exists in current zone (green) or you need to teleport (red). It rely on ESO API, so it can only display what game itself can display and it also sometimes can lead to weird results because of API nuances, more testing needed.
+
 V. 10
 - Added customization - you can change font size for distance label and reticle over label with POI name, size of marker itself, transparency of marker on the distance and when you are close to it, max distance of marker on which it is visible and color
 
